--- a/cms-deploy.yaml
+++ b/cms-deploy.yaml
@@ -1,6 +1,6 @@
 deployable: cms-theme-boilerplate
 repoName: cms-theme-boilerplate
-themePath: @hubspot/boilerplate
+themePath: '@hubspot/boilerplate'
 
 availableToScaffold: true
 availableToDownload: false
@@ -10,8 +10,8 @@ majorVersion: 1
 scopes:
   - website-theme-write-access
 moduleIds:
-  @hubspot/boilerplate/modules/button: 88421868418
-  @hubspot/boilerplate/modules/card: 88421868424
-  @hubspot/boilerplate/modules/menu: 88421868430
-  @hubspot/boilerplate/modules/pricing-card: 158594354306154
-  @hubspot/boilerplate/modules/social-follow: 158594355021759
+  '@hubspot/boilerplate/modules/button': 88421868418
+  '@hubspot/boilerplate/modules/card': 88421868424
+  '@hubspot/boilerplate/modules/menu': 88421868430
+  '@hubspot/boilerplate/modules/pricing-card': 158594354306154
+  '@hubspot/boilerplate/modules/social-follow': 158594355021759
